Added once per 60s and 10s sample rates. Removed 500Hz

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -39,14 +39,17 @@
           id="LOG_SAMPLE_RATE"
           class="json-as-number"
         >
-          <option value="0">1 Sample/s</option>
-          <option value="1">2 Samples/s</option>
-          <option value="2">5 Samples/s</option>
-          <option value="3">10 Samples/s</option>
-          <option value="4">25 Samples/s</option>
-          <option value="5">50 Samples/s</option>
-          <option value="6">100 Samples/s</option>
-          <option value="7">250 Samples/s</option>
+          <option value="0">Once per minute</option>
+          <option value="1">Once per 10 seconds</option>
+          <option value="2">1 Sample/s</option>
+          <option value="3">2 Samples/s</option>
+          <option value="4">5 Samples/s</option>
+          <option value="5">10 Samples/s</option>
+          <option value="6">25 Samples/s</option>
+          <option value="7">50 Samples/s</option>
+          <option value="8">100 Samples/s</option>
+          <option value="9">250 Samples/s</option>
+          
         </select>
       </p>
 
