Channels can be enable/disabled in logfile

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -73,7 +73,7 @@
     </div>
 
     <div class="group" id="channel_configuration">
-      <h3>Analog channels</h3>
+      <h3>Analog & digital channels</h3>
       <p>Select the mode used for the analog channels.</p>
       <p>
         <i
@@ -84,12 +84,14 @@
 
       <table>
         <tr>
+          <th>Enable</th>
           <th>Analog channel</th>
           <th>Mode</th>
           <th>Range</th>
         </tr>
         <tr>
-          <td>Channel 1</td>
+          <td><input type="checkbox" name="AIN1_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 1</td>
           <td>
             <select
               name="NTC1"
@@ -102,14 +104,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN1" id="AIN1" class="json-as-bool">
+            <select name="AIN1_RANGE" id="AIN1_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 2</td>
+          <td><input type="checkbox" name="AIN2_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 2</td>
           <td>
             <select
               name="NTC2"
@@ -122,14 +125,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN2" id="AIN2" class="json-as-bool">
+            <select name="AIN2_RANGE" id="AIN2_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 3</td>
+          <td><input type="checkbox" name="AIN3_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 3</td>
           <td>
             <select
               name="NTC3"
@@ -142,14 +146,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN3" id="AIN3" class="json-as-bool">
+            <select name="AIN3_RANGE" id="AIN3_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 4</td>
+          <td><input type="checkbox" name="AIN4_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 4</td>
           <td>
             <select
               name="NTC4"
@@ -162,14 +167,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN4" id="AIN4" class="json-as-bool">
+            <select name="AIN4_RANGE" id="AIN4_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 5</td>
+          <td><input type="checkbox" name="AIN5_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 5</td>
           <td>
             <select
               name="NTC5"
@@ -182,14 +188,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN5" id="AIN5" class="json-as-bool">
+            <select name="AIN5_RANGE" id="AIN5_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 6</td>
+          <td><input type="checkbox" name="AIN6_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 6</td>
           <td>
             <select
               name="NTC6"
@@ -202,14 +209,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN6" id="AIN6" class="json-as-bool">
+            <select name="AIN6_RANGE" id="AIN6_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 7</td>
+          <td><input type="checkbox" name="AIN7_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 7</td>
           <td>
             <select
               name="NTC7"
@@ -222,14 +230,15 @@
             </select>
           </td>
           <td>
-            <select name="AIN7" id="AIN7" class="json-as-bool">
+            <select name="AIN7_RANGE" id="AIN7_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
         </tr>
         <tr>
-          <td>Channel 8</td>
+          <td><input type="checkbox" name="AIN8_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Analog Input 8</td>
           <td>
             <select
               name="NTC8"
@@ -242,11 +251,51 @@
             </select>
           </td>
           <td>
-            <select name="AIN8" id="AIN8" class="json-as-bool">
+            <select name="AIN8_RANGE" id="AIN8_RANGE" class="json-as-bool">
               <option value="0">+/-10 V</option>
               <option value="1">+/-60 V</option>
             </select>
           </td>
+        </tr>
+
+        <!-- Digital Inputs Rows -->
+        <tr>
+          <td><input type="checkbox" name="DIN1_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 1</td>
+          <td></td> <!-- Mode column left empty for digital inputs -->
+          <td></td> <!-- Range column can be left empty or repurposed if needed -->
+        </tr>
+        <!-- Repeat for DI2 to DI6 with onchange added -->
+        <tr>
+          <td><input type="checkbox" name="DIN2_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 2</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <!-- Continue adding similar blocks for DI3 to DI6, changing the numbers accordingly -->
+        <tr>
+          <td><input type="checkbox" name="DIN3_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 3</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" name="DIN4_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 4</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" name="DIN5_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 5</td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <td><input type="checkbox" name="DIN6_ENABLE" value="1" class="json-as-bool"></td>
+          <td>Digital Input 6</td>
+          <td></td>
+          <td></td>
         </tr>
       </table>
 
