--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -450,10 +450,12 @@
           />
           <label class="choice" for="log_mode"
             >Raw data<br />Write the raw data and convert the data to a CSV file
-            afterwards using the Python conversion script. Download
-            <a href="convert_raw.py">here</a>. Recommended for long measurements
-            at high log samples</label
-          >
+            afterwards. This option is recommended for long measurements. You
+            can use the Python conversion script or Windows exe tool to convert
+            the .dat files to .csv. Download the Python
+            <a href="convert_raw.py">here</a> or check the Uberlogger website
+            for the Windows tool in the download section.
+          </label>
         </span>
 
         <span>
@@ -484,6 +486,37 @@
             Example: 20240312_14-34-34_Logfile.csv. Each split part will have a
             new timestamp in UTC time.
           </label>
+        </span>
+
+        <span>
+          <h3>CSV options</h3>
+          <div>
+            <label for="file_separator_char"
+              >CSV separator character. Semicolon is recommended for
+              Excel.</label
+            >
+            <select
+              name="FILE_SEPARATOR_CHAR"
+              id="file_separator_char"
+              class="json-as-number"
+            >
+              <option value="0">Comma (,)</option>
+              <option value="1">Semicolon (;)</option>
+            </select>
+            <label for="file_decimal_char"
+              >Decimal notation character. Note: this option does not have
+              effect when using RAW data file format. The conversion script will
+              use the system's default decimal character.</label
+            >
+            <select
+              name="FILE_DECIMAL_CHAR"
+              id="file_decimal_char"
+              class="json-as-number"
+            >
+              <option value="0">Dot (.)</option>
+              <option value="1">Comma (,)</option>
+            </select>
+          </div>
         </span>
 
         <h3>File name and split size</h3>
