Styling fix logging view

--- a/front/www/html/log.html
+++ b/front/www/html/log.html
@@ -6,7 +6,7 @@
     <p>Logger time: <span name="TIMESTAMPSTR">-</span></p>
     <p>Logger status: <span name="LOGGER_STATE">-</span></p>
     <p>Logger error: <span name="ERRORCODE">-</span></p>
-    <p style="border-style: solid; border-color: red">
+    <p style="border-style: solid; border-color: red; max-width: 600px">
       <i
         ><b>Note:</b> ensure you have configured the channels correctly before
         starting logging!</i
