--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -410,7 +410,8 @@
 
       <h3>Analog Calibration</h3>
       <p>
-        Hit the calibration button below to start calibration of the channels
+        Hit the calibration button below to start zero calibration of the
+        channels
       </p>
       <div id="calibration">
         <input
