get current config dynamically created

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -760,7 +760,7 @@
         accept=".json"
         style="visibility: hidden; display: none"
       />
-      <a href="settings.json" target="_blank"
+      <a href="/ajax/getConfig?download=true" target="_blank"
         ><button class="button" type="button">
           Download current settings
         </button></a
