Added save button for sample settings

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -85,13 +85,17 @@
           <option value="0">Normal sampling (default)</option>
           <option value="1">Average samples over time</option>
         </select>
-
-
       </p>
 
-      
-
-      
+      <div id="configuration_done">
+        <input
+          id="saveForm"
+          class="button_text"
+          type="button"
+          onClick="setConfig()"
+          value="Save sample settings"
+        />
+      </div>
     </div>
 
     <div class="group" id="channel_configuration">
