explanation that only trigger on high input is supported

--- a/front/www/html/config.html
+++ b/front/www/html/config.html
@@ -108,11 +108,13 @@
         time for the trigger input to stabilize or to delay the measurement. If
         fast oscilliations on the trigger input can occur that may quickly
         enable and disable logging, you can set a debouce time here. Maximum
-        debounce time is 60000 ms (60 seconds)
+        debounce time is 60000 ms (60 seconds).
+        <b>Currently only trigger on input HIGH is supported.</b>
       </p>
       <p>
         <i
-          ><b>Note:</b> no file is created when the trigger is not triggered.</i
+          ><b>Note:</b> the live view is not updating when no the trigger is not
+          triggered.</i
         >
       </p>
       <p>
